Fixed footer and spacing issue

--- a/portfolio/src/style.css
+++ b/portfolio/src/style.css
@@ -1,14 +1,39 @@
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0;
+  margin:0;
   }
 
-html, body{
+/* html, body{
     height: 100%;
     width: 100%; 
+  
+} */
+
+/* body {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1em;
+  height: 100vh;
+  align-items: center;
+  display: flex; 
+  justify-content: center;
+} */
+
+body{
     background-image: url('img/portfolioBackground.jpg');
     background-size: cover;
     background-attachment: fixed;
     background-position: center center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1em;
+    /* height: 100vh; */
+    
+    align-items: center;
+    justify-content: center;
+
+    /* position: relative;
+    min-height: 100vh;
+    padding-bottom: 500px;   */
 }
 
 .navbar{
@@ -58,24 +83,25 @@ html, body{
     margin-top : 5%;
     color:white;
 }
-.aboutus{
-	/* background-image: url('img/keyboardImg.jpg') ; */
+/* .aboutus{
+ background-image: url('img/keyboardImg.jpg') ;
 	display: table; 
  	position:relative;
  	width: 90%;
 	height: 100%;
 	background-size: cover;
-    background-attachment: fixed;
-    background-position: center center;
-}
+  background-attachment: fixed;
+  background-position: center center;
+} */
 
 .lead{
-	border: 1px solid grey;
+  box-shadow: 0 4px 8px 0 #8a6d3b, 0 6px 20px 0 rgba(0, 0, 0, 0.19);  /* transform: scale(1.05); */
+	/* border: 1px solid grey; */
 	background-color: rgb(230, 225, 225);
 	width:100%;
-    padding:1%;
-    font-size: 20px;
-    /* margin: 5% 30%; */
+  padding:2%;
+  font-size: 20px;
+  /* margin: 5% 30%; */
 }
 
 .heading{
@@ -93,23 +119,27 @@ ul.list-group:after {
 	content: "";
   } 
 
-#home {
-    /* background: url('img/bgimg6.jpg');  */
+  span {
+    white-space: pre-wrap;
+  }
+
+ #home {
+    /* background: url('img/bgimg6.jpg');   */
+    /* background-size: cover;
+    background-attachment: fixed; */
     display: table;  
     position:relative;
     width:100%;
     height:100%;
-    background-size: cover;
-    background-attachment: fixed;
-    padding: 25% 0;
-    color: rgb(196, 189, 189);
-} 
+    padding: 20% 0;
+    color: rgb(196, 189, 189);   
+}  
 
 .landing-text {
     width: 250px;
     height: 250px;
     display: table-cell; 
-	text-align: center;
+	  text-align: center;
     vertical-align: middle; 
     font-size: 45px;
     color: rgb(82, 123, 177);
@@ -127,6 +157,13 @@ ul.list-group:after {
     display:inline !important; 
     font-size: 20px;
 }
+
+.list-group-item.active{
+  background-color: rgb(230, 225, 225) !important;
+  color: rgb(172, 99, 99) !important;
+  border-color: rgb(37, 37, 53) !important;
+}
+
 .row {
     margin-right: -15px;
     margin-left: -15px;
@@ -171,25 +208,29 @@ a.btn {
 	background-color: rgb(195, 193, 193);
 }  */
 
-.projects{
+/* .projects{
 	display: table; 
-    position:relative;
+  position:relative;
 	width: 100%;
 	height: 100%;
 	background-size: cover;
 	background-attachment: fixed;
 
-} 
+}  */
 
 footer{
-	width:100%;
-	height:100%;
-	display:table;
-	position: relative;
+	width:100% !important;
+  height:100%; 
+  /* display: table; */
+  /* display:table;
+	position: relative;  */
 	background-color: #102b3d;;
 	padding: 5% 5% 10% 5%;
 	color: #FFF;
-
+  /* position: absolute; */
+  /* bottom: 0px; */
+  /* width: 100%; */
+  /* height: 500px; */
 }
 
 .icons{
@@ -207,12 +248,12 @@ footer{
 
 .fa {
 	display: inline-block;
-    font: normal normal normal 14px/1 FontAwesome;
-    font-size: inherit;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    transform: translate(0, 0);
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  transform: translate(0, 0);
 }
 
 .card-title{
@@ -307,7 +348,7 @@ footer{
 :root {
     --mainColor: white;
   }
-  
+/*   
   body {
     align-items: center;
     display: flex;
@@ -315,7 +356,7 @@ footer{
     font-size: 1em;
     height: 100vh;
     justify-content: center;
-  }
+  } */
   
   /* a {
     background-position: 0 100%;
